<resources>
    <string name="app_name">stripe_pj</string>
    <string name="card_number_def">4242 4242 4242 4242</string>
    <string name="card_number_hint_my">Card number</string>
    <string name="expiration_hint">Expiration</string>
    <string name="month_def">January</string>
    <string name="year_def">2020</string>
    <string name="cvv_hint">CVV</string>
    <string name="cvv_def">123</string>
</resources>
