<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/root"
        android:layout_width="match_parent"
        app:layout_constraintWidth_min="320dp"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_corner_radius"
        android:layout_margin="@dimen/margin_view"
        app:cardPreventCornerOverlap="true"
        android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <!--Background-->
        <FrameLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >


            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/bg_primary"/>

            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:alpha="0.1"
                    android:src="@drawable/cbimage"/>
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >

            <!--Card number-->
            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/card_number_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/saira_regular"
                    android:text="@string/card_number_hint_my"
                    android:layout_marginTop="@dimen/credit_card_top"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/white"
                    />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/card_number_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/saira_medium"
                    android:text="@string/card_number_def"
                    android:textColor="@color/white"
                    android:textSize="@dimen/number_card_t_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_number_hint"
                    />
            <!--Expiration-->
            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/expiration_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/saira_regular"
                    android:text="@string/expiration_hint"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/margin_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_number_label"
                    />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/expiration_m_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/saira_medium"
                    android:textSize="@dimen/number_card_t_size"
                    android:text="@string/month_def"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/expiration_hint"
                    />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/expiration_y_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/saira_medium"
                    android:text="@string/year_def"
                    android:textColor="@color/white"
                    android:textSize="@dimen/number_card_t_size"
                    app:layout_constraintStart_toEndOf="@id/expiration_m_label"
                    android:layout_marginStart="@dimen/margin_view"
                    app:layout_constraintTop_toBottomOf="@+id/expiration_hint"
                    />

            <!--CVV-->
            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cvv_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/saira_regular"
                    android:text="@string/cvv_hint"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/margin_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_number_label"
                    />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cvv_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/saira_medium"
                    android:text="@string/cvv_def"
                    android:textColor="@color/white"
                    android:textSize="@dimen/number_card_t_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cvv_hint"
                    />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
